# LTAOM

./: README.md  run_loop_optimization.sh  run_nodelet_avia.sh  run_nodelet_ouster.sh  run_nodelet_ouster_multisession.sh  run_nodelet_velodyne.sh
FAST_LIO/: CMakeLists.txt  README.md  package.xml  plugin_info.xml
FAST_LIO/Log/: fast_lio_time_log.csv  imu.txt  mat_out.txt  mat_pre.txt  plot.py  pos_log.txt
FAST_LIO/config/: avia.yaml  ouster128.yaml  ouster64.yaml  ouster64_mulran.yaml  pandar128.yaml  velody16.yaml  velody16_ncll.yaml  xgrids.yaml
FAST_LIO/include/: common_lib.h  use-ikfom.hpp
FAST_LIO/include/FOV_Checker/: FOV_Checker.cpp  FOV_Checker.h
FAST_LIO/include/IKFoM_toolkit/esekfom/: esekfom.hpp
FAST_LIO/include/ikd-Forest/: .gitignore  Makefile  ikd_Forest.cpp  ikd_Forest.h  ikd_Forest_Test.cpp
FAST_LIO/include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
FAST_LIO/launch/: gdb_debug.launch  mapping_avia.launch  mapping_avia_arm.launch  mapping_avia_outdoor.launch  mapping_horizon.launch  mapping_marsdevice.launch  mapping_ouster64.launch  mapping_ouster64_mulran.launch  mapping_velody16.launch  replay.launch
FAST_LIO/map_eva/: ReadMe.txt  evaluate_map.launch  mapconsistency_eva.cpp
FAST_LIO/rviz_cfg/: loam_livox.rviz  loam_multilevel.rviz
FAST_LIO/src/: IMU_Processing.hpp  extra_lib.cpp  extra_lib.h  fastlio_plugin.cpp  fastlio_plugin.h  laserMapping.cpp  laserMapping.h  preprocess.cpp  preprocess.h
FAST_LIO/test/: fov_test.cpp  ikd_Forest_Test.cpp  kd_tree_test.cpp
STD/: CMakeLists.txt  package.xml  plugin_info.xml
STD/Log/: augument.txt  log.txt  log_0.01.txt
STD/config/: config_avia.yaml  config_horizon.yaml  config_velo_kitti_fine.yaml  config_velo_mulran.yaml  config_velo_mulran_multisession.yaml  config_velo_nclt.yaml  config_wild_place.yaml
STD/gt/: kaist03.txt  kitti00_gt.txt  kitti02_gt.txt  kitti05_gt.txt  kitti08_gt.txt  kitti360_02.txt  kitti_00.txt  kitti_02.txt  kitti_08.txt  pose_optimize_with_loop_kitti05.json  revisit02_gt.txt
STD/include/: std.h  std_ba.h  std_pgo.h  util_class.hpp
STD/launch/: online_loop_detection.launch
STD/launch/avia/: avia_loop.launch  calc_avia_pose.launch  test_ba.launch  test_pgo.launch
STD/launch/cu/: calc_cu_gt.launch  cu_loop.launch  test_cu_memory.launch
STD/launch/kitti360/: calc_kitti360_gt.launch  kitti360_loop.launch
STD/launch/mulran/: mulran_loop.launch
STD/launch/multi_section/: multi_section.launch
STD/launch/wild_place/: wild_place.launch
STD/rviz_cfg/: ba.rviz  compression.rviz  loop.rviz  multi_section.rviz  wild_place.rviz
STD/src/: loop_detection.cpp  loop_detection.h  loop_detection_plugin.cpp  loop_detection_plugin.h  std.cpp  std_ba.cpp
STD/src/avia/: calc_avia_pose.cpp
STD/src/corner_version/: bag_loop.cpp
STD/src/cu/: calc_cu_gt.cpp  cu_loop.cpp  test_cu_memory.cpp
STD/src/kitti360/: calc_kitti360_gt.cpp  kitti360_loop.cpp
STD/src/multi_section/: multi_section.cpp
STD/src/nclt/: calc_nclt_gt.cpp  calc_nclt_pose.cpp
STD/src/wild_place/: wild_place.cpp
loop_optimization/: CMakeLists.txt  package.xml  plugin_info.xml
loop_optimization/include/: TunningPointPairsFactor.h  common_lib.hpp  keyframe_containner.hpp  predefined_types.h
loop_optimization/launch/: loopopt_config_avia.yaml  loopopt_config_mulran.yaml  loopopt_config_nclt.yaml  run_all_avia.launch  run_all_mulran.launch  run_all_mulran_multisession.launch  run_all_nclt.launch
loop_optimization/src/: loop_optimization_node.cpp  loop_optimization_node.h  loop_optimization_plugin.cpp  loop_optimization_plugin.h
